--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -52,6 +52,7 @@ msgstr "Гандаль"
 msgid "Золото"
 msgstr "Золата"
 
+#. Last modified by Felix Kauffman, id 19
 #: bill/templates/state/gov/bills/change_residency.html:42
 #: bill/templates/state/gov/drafts/change_residency.html:21
 #: bill/templates/state/gov/reviewed/change_residency.html:41
@@ -59,11 +60,10 @@ msgstr "Золата"
 #: storage/models/destroy.py:58 storage/models/storage.py:76
 #: storage/models/storage.py:183 storage/models/trade_offer.py:91
 #: storage/models/transport.py:153
-#, fuzzy
 #| msgid "Автоматы - кубов"
 msgctxt "goods"
 msgid "Автоматы"
-msgstr "Аўтаматы - кубоў"
+msgstr "Аўтаматы"
 
 #: bill/templates/state/gov/bills/change_residency.html:47
 #: bill/templates/state/gov/drafts/change_residency.html:26
@@ -101,15 +101,15 @@ msgctxt "goods"
 msgid "Наличные"
 msgstr "Наяўныя"
 
+#. Last modified by Felix Kauffman, id 19
 #: factory/models/project.py:16 state/models/treasury.py:62
 #: storage/models/destroy.py:38 storage/models/storage.py:59
 #: storage/models/storage.py:148 storage/models/trade_offer.py:82
 #: storage/models/transport.py:123
-#, fuzzy
 #| msgid "Бензин"
 msgctxt "goods"
 msgid "Бензин"
-msgstr "Бэнзін"
+msgstr "Бензін"
 
 #: factory/models/project.py:39 state/models/treasury.py:68
 #: storage/models/destroy.py:44 storage/models/storage.py:63
@@ -139,34 +139,35 @@ msgctxt "goods"
 msgid "Сталь"
 msgstr "Сталь"
 
+#. Last modified by Felix Kauffman, id 19
 #: factory/models/project.py:101 state/models/treasury.py:74
 #: storage/models/destroy.py:48 storage/models/storage.py:67
 #: storage/models/storage.py:166 storage/models/trade_offer.py:86
 #: storage/models/transport.py:141
 #: storage/templates/storage/redesign/storage.html:216
-#, fuzzy
 #| msgid "Алюминий"
 msgctxt "goods"
 msgid "Алюминий"
-msgstr "Алюмін"
+msgstr "Алюміній"
 
+#. Last modified by Felix Kauffman, id 19
 #: factory/models/project.py:116 state/models/treasury.py:78
 #: storage/models/destroy.py:52 storage/models/storage.py:71
 #: storage/models/storage.py:172 storage/models/trade_offer.py:88
 #: storage/models/transport.py:147
-#, fuzzy
 #| msgctxt "overview"
 #| msgid "парламент"
 msgctxt "goods"
 msgid "Медикаменты"
-msgstr "парлямэнт"
+msgstr "Медыкаменты"
 
+#. Last modified by Felix Kauffman, id 19
 #: factory/models/project.py:132 state/models/treasury.py:81
 #: storage/models/destroy.py:54 storage/models/storage.py:72
 #: storage/models/storage.py:177 storage/models/trade_offer.py:89
 msgctxt "goods"
 msgid "Буровые установки"
-msgstr ""
+msgstr "Буравая ўстаноўка"
 
 #: factory/models/project.py:163 state/models/treasury.py:88
 #: storage/models/destroy.py:60 storage/models/storage.py:78
@@ -207,13 +208,14 @@ msgctxt "goods"
 msgid "ПТ-орудия"
 msgstr "СТ-гарматы"
 
+#. Last modified by Felix Kauffman, id 19
 #: factory/models/project.py:232 state/models/treasury.py:103
 #: storage/models/destroy.py:70 storage/models/storage.py:86
 #: storage/models/storage.py:188 storage/models/trade_offer.py:94
 #: storage/models/transport.py:183
 msgctxt "goods"
 msgid "Мины"
-msgstr ""
+msgstr "Міны"
 
 #: factory/models/project.py:248 state/models/treasury.py:106
 #: storage/models/destroy.py:72 storage/models/storage.py:85
@@ -2138,9 +2140,10 @@ msgstr "Топ па характарыстыкам"
 msgid "Мировое население"
 msgstr "Сусьветнае насельніцтва"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/new_player.py:90
 msgid ": попробуйте создать персонажа, не загружая изображение"
-msgstr "Паспрабуйце стварыць пэрсанажа, не запампоўваючы выяву"
+msgstr "Паспрабуйце стварыць пэрсанажа, не загружая выяву"
 
 #: player/views/new_player.py:91 player/views/new_player.py:104
 msgid "Новый персонаж"
@@ -2158,17 +2161,20 @@ msgstr "Агляд"
 msgid "Такого языка в игре нет"
 msgstr "Такой мовы ў гульні няма"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/set_language.py:39 player/views/set_language.py:55
 msgid "Изменение языка"
-msgstr "Зьмяніць мову"
+msgstr "Змяніць мову"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/set_timezone.py:27
 msgid "Такого часового пояса в игре нет"
-msgstr "Такога часавога пасу ў гульні няма"
+msgstr "Такога часавога паясы ў гульні няма"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/set_timezone.py:28 player/views/set_timezone.py:44
 msgid "Изменение часового пояса"
-msgstr "Зьмяніць часавы пас"
+msgstr "Змяніць часавы пояс"
 
 #: player/views/skills/skill_queue.py:30 skill/views/skills_list.py:59
 msgid "Навыки"
@@ -2179,30 +2185,34 @@ msgstr "Навыкі"
 msgid "Last modified by {player.nickname}, id {player.pk}"
 msgstr ""
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/wallet.py:21
-#, fuzzy
 #| msgid "Финансирование"
 msgid "Финансы"
-msgstr "Фінансаваньне"
+msgstr "Фінансаванне"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/region.py:90
 msgctxt "goods"
 msgid "WTI"
-msgstr ""
+msgstr "WTI"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/region.py:91
 msgctxt "goods"
 msgid "Brent"
-msgstr ""
+msgstr "Brent"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/region.py:92
 msgctxt "goods"
 msgid "Urals"
-msgstr ""
+msgstr "Urals"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/templates/region/buildings/defences.html:5
 msgid "Уровень Укреплений"
-msgstr "Узровень Узмацаваньняў"
+msgstr "Узровень Узмацаванняў"
 
 #: region/templates/region/buildings/hospital.html:5
 msgid "Уровень Госпиталя"
@@ -2470,18 +2480,20 @@ msgstr "Марка нафты"
 msgid "Запасы руд"
 msgstr "Прыпас рудаў"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/templates/region/region_view.html:173
 msgid "Качество руды (уголь/железо/бокситы)"
-msgstr "Якасьць рудаў (вугаль/жалеза/баксіты)"
+msgstr "Якасць рудаў (вугаль/жалеза/баксіты)"
 
 #: region/templates/region/region_view.html:194
 msgid "Региональные налоги"
 msgstr "Рэгіянальныя падаткі"
 
+#. Last modified by Felix Kauffman, id 19
 #: region/templates/region/region_view.html:201
 #: state/templates/state/state_view.html:154
 msgid "На финансирование"
-msgstr "На фінансаваньне"
+msgstr "На фінансаванне"
 
 #: region/templates/region/region_view.html:213
 #: state/templates/state/state_view.html:166
@@ -2598,9 +2610,10 @@ msgctxt "mining"
 msgid "Неизвестный тип ресурса"
 msgstr "Некарэктны запрос"
 
+#. Last modified by Felix Kauffman, id 19
 #: skill/views/skill_cancel.py:34
 msgid "ID навыка должен быть числом"
-msgstr "ID навыку мусіць быць лічбавым"
+msgstr "ID навыку мусіць быць лічбай"
 
 #: skill/views/skill_cancel.py:35 skill/views/skill_cancel.py:43
 #: skill/views/skill_cancel.py:51 skill/views/skill_cancel.py:61
@@ -2620,13 +2633,15 @@ msgstr "Няма навыкаў у чарзе"
 msgid "Нет такого навыка"
 msgstr "Няма такога навыка"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/state.py:36
 msgid "Свободная"
-msgstr ""
+msgstr "Незалежная"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/state.py:37
 msgid "Выдаётся министром"
-msgstr ""
+msgstr "Выдаецца міністрам"
 
 #: state/models/treasury.py:42 storage/models/destroy.py:18
 #: storage/models/storage.py:43 storage/models/storage.py:116
@@ -2655,41 +2670,41 @@ msgctxt "goods"
 msgid "Бокситы"
 msgstr "Баксіты"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/treasury.py:52 storage/models/destroy.py:28
 #: storage/models/storage.py:51 storage/models/storage.py:132
 #: storage/models/trade_offer.py:78 storage/models/transport.py:107
-#, fuzzy
 #| msgid "Нефть WTI"
 msgctxt "goods"
 msgid "Нефть WTI"
-msgstr "WTI"
+msgstr "Нафта WTI"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/treasury.py:55 storage/models/destroy.py:31
 #: storage/models/storage.py:53 storage/models/storage.py:137
 #: storage/models/trade_offer.py:79 storage/models/transport.py:112
-#, fuzzy
 #| msgid "Нефть Brent"
 msgctxt "goods"
 msgid "Нефть Brent"
-msgstr "Brent"
+msgstr "Нафта Brent"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/treasury.py:58 storage/models/destroy.py:34
 #: storage/models/storage.py:55 storage/models/storage.py:142
 #: storage/models/trade_offer.py:80 storage/models/transport.py:117
-#, fuzzy
 #| msgid "Нефть Urals"
 msgctxt "goods"
 msgid "Нефть Urals"
-msgstr "Уральская"
+msgstr "Нафта Urals"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/models/treasury.py:65 storage/models/destroy.py:41
 #: storage/models/storage.py:61 storage/models/storage.py:153
 #: storage/models/trade_offer.py:83
-#, fuzzy
 #| msgid "Дизельное топливо"
 msgctxt "goods"
 msgid "Дизельное топливо"
-msgstr "Дызэльнае паліва"
+msgstr "Дызельнае паліва"
 
 #: state/models/treasury.py:94 storage/models/destroy.py:64
 #: storage/models/storage.py:80 storage/models/storage.py:208
@@ -2708,23 +2723,23 @@ msgstr ""
 msgid "Столица"
 msgstr "Сталіца"
 
+#. Last modified by Felix Kauffman, id 19
 #: state/templates/state/state_view.html:118
-#, fuzzy
 #| msgctxt "profile"
 #| msgid "прописка"
 msgid "Прописка"
-msgstr "прапіска"
+msgstr "Прапіска"
 
 #: state/templates/state/state_view.html:147
 msgid "Государственные налоги"
 msgstr "Дзяржаўныя падаткі"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:30
-#, fuzzy
 #| msgid "Минералы"
 msgctxt "goods"
 msgid "Минералы"
-msgstr "Мінэралы"
+msgstr "Мінералы"
 
 #: storage/models/storage.py:31
 #, fuzzy
@@ -2740,12 +2755,12 @@ msgctxt "goods"
 msgid "Материалы"
 msgstr "Матэрыялы"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:33
-#, fuzzy
 #| msgid "Оборудование"
 msgctxt "goods"
 msgid "Оборудование"
-msgstr "Абсталяваньне"
+msgstr "Абсталяванне"
 
 #: storage/models/storage.py:34
 #, fuzzy
@@ -2761,131 +2776,131 @@ msgctxt "storage"
 msgid "Уровень"
 msgstr "Узровень ЦЭС"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:118
-#, fuzzy
 #| msgid "Уголь - кубов"
 msgctxt "goods"
 msgid "Уголь - лимит"
-msgstr "Вугаль - кубоў"
+msgstr "Вугаль"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:123
-#, fuzzy
 #| msgid "Железо - кубов"
 msgctxt "goods"
 msgid "Железо - лимит"
-msgstr "Жалеза - кубоў"
+msgstr "Жалеза"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:128
-#, fuzzy
 #| msgid "Бокситы - кубов"
 msgctxt "goods"
 msgid "Бокситы - лимит"
-msgstr "Баксіты - кубоў"
+msgstr "Баксіты"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:134
-#, fuzzy
 #| msgid "Нефть WTI"
 msgctxt "goods"
 msgid "Нефть WTI - лимит"
-msgstr "WTI"
+msgstr "Нафта WTI"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:139
-#, fuzzy
 #| msgid "Нефть Brent"
 msgctxt "goods"
 msgid "Нефть Brent - лимит"
-msgstr "Brent"
+msgstr "Нафта Brent"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:144
-#, fuzzy
 #| msgid "Нефть Urals"
 msgctxt "goods"
 msgid "Нефть Urals - лимит"
-msgstr "Уральская"
+msgstr "Нафта Urals"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:150
-#, fuzzy
 #| msgid "Железо - кубов"
 msgctxt "goods"
 msgid "Бензин - лимит"
-msgstr "Жалеза - кубоў"
+msgstr "Паліва"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:155
-#, fuzzy
 #| msgid "Дизельное топливо"
 msgctxt "goods"
 msgid "Дизельное топливо - лимит"
-msgstr "Дызэльнае паліва"
+msgstr "Дызельнае паліва"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:160
-#, fuzzy
 #| msgid "Пластик - кубов"
 msgctxt "goods"
 msgid "Пластик - лимит"
-msgstr "Пластык - кубоў"
+msgstr "Пластык"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:164
-#, fuzzy
 #| msgid "Уголь - кубов"
 msgctxt "goods"
 msgid "Сталь - лимит"
-msgstr "Вугаль - кубоў"
+msgstr "Сталь"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:168
-#, fuzzy
 #| msgid "Алюминий - кубов"
 msgctxt "goods"
 msgid "Алюминий - лимит"
-msgstr "Алюмін - кубоў"
+msgstr "Алюміній"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:174
-#, fuzzy
 #| msgid "Автоматы - кубов"
 msgctxt "goods"
 msgid "Медикаменты - лимит"
-msgstr "Аўтаматы - кубоў"
+msgstr "Медыкаменты"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:179
-#, fuzzy
 #| msgid "Бокситы - кубов"
 msgctxt "goods"
 msgid "Буры - лимит"
-msgstr "Баксіты - кубоў"
+msgstr "Буры"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:185
-#, fuzzy
 #| msgid "Автоматы - кубов"
 msgctxt "goods"
 msgid "Автоматы - лимит"
-msgstr "Аўтаматы - кубоў"
+msgstr "Аўтаматы"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:190
-#, fuzzy
 #| msgid "Железо - кубов"
 msgctxt "goods"
 msgid "Мины - лимит"
-msgstr "Жалеза - кубоў"
+msgstr "Міны"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:195
-#, fuzzy
 #| msgid "Пластик - кубов"
 msgctxt "goods"
 msgid "ПТ-орудия - лимит"
-msgstr "Пластык - кубоў"
+msgstr "СТ-гарматы"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:200
-#, fuzzy
 #| msgid "Бокситы - кубов"
 msgctxt "goods"
 msgid "Танки - лимит"
-msgstr "Баксіты - кубоў"
+msgstr "Танкі"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:205
-#, fuzzy
 #| msgid "Штурмовики - кубов"
 msgctxt "goods"
 msgid "Штурмовики - лимит"
-msgstr "Штурмавікі - кубоў"
+msgstr "Штурмавікі"
 
 #: storage/models/storage.py:210
 #, fuzzy
@@ -2894,26 +2909,26 @@ msgctxt "goods"
 msgid "Орбитальные орудия - лимит"
 msgstr "Арбітальная зброя"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:215
-#, fuzzy
 #| msgid "Уголь - кубов"
 msgctxt "goods"
 msgid "ПЗРК - лимит"
-msgstr "Вугаль - кубоў"
+msgstr "ПЗРК"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:220
-#, fuzzy
 #| msgid "Железо - кубов"
 msgctxt "goods"
 msgid "БМП - лимит"
-msgstr "Жалеза - кубоў"
+msgstr "БМП"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/storage.py:225
-#, fuzzy
 #| msgid "Железо - кубов"
 msgctxt "goods"
 msgid "БПЛА - лимит"
-msgstr "Жалеза - кубоў"
+msgstr "БПЛА"
 
 #: storage/models/storage.py:271
 msgid "positive_spend_stock_req"
@@ -2965,19 +2980,19 @@ msgctxt "goods"
 msgid "Brent - кубов"
 msgstr "Brent - кубоў"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:119
-#, fuzzy
 #| msgid "Urals - кубов"
 msgctxt "goods"
 msgid "Urals - кубов"
-msgstr "Уральская нафта - кубоў"
+msgstr "Urals - кубоў"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:125
-#, fuzzy
 #| msgid "Бензин - кубов"
 msgctxt "goods"
 msgid "Бензин - кубов"
-msgstr "Бэнзін - кубоў"
+msgstr "Бензін - кубоў"
 
 #: storage/models/transport.py:130
 #, fuzzy
@@ -3000,19 +3015,19 @@ msgctxt "goods"
 msgid "Сталь - кубов"
 msgstr "Сталь - кубоў"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:143
-#, fuzzy
 #| msgid "Алюминий - кубов"
 msgctxt "goods"
 msgid "Алюминий - кубов"
-msgstr "Алюмін - кубоў"
+msgstr "Алюміній - кубоў"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:149
-#, fuzzy
 #| msgid "Автоматы - кубов"
 msgctxt "goods"
 msgid "Медикаменты - кубов"
-msgstr "Аўтаматы - кубоў"
+msgstr "Медыкаменты - кубоў"
 
 #: storage/models/transport.py:155
 #, fuzzy
@@ -3063,19 +3078,19 @@ msgctxt "goods"
 msgid "ПТ-пушка"
 msgstr "СТ-гармата"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:180
-#, fuzzy
 #| msgid "ПТ-пушка - кубов"
 msgctxt "goods"
 msgid "ПТ-пушка - кубов"
-msgstr "СТ-гарматы - кубоў"
+msgstr "СТ-гармата - кубоў"
 
+#. Last modified by Felix Kauffman, id 19
 #: storage/models/transport.py:185
-#, fuzzy
 #| msgid "Дроны - кубов"
 msgctxt "goods"
 msgid "Мины - кубов"
-msgstr "Дроны - кубоў"
+msgstr "Міны - кубоў"
 
 #: storage/models/transport.py:190
 #, fuzzy
@@ -4462,9 +4477,10 @@ msgstr "Папаўненьне энэргіі"
 msgid "Танки"
 msgstr "Танкі"
 
+#. Last modified by Felix Kauffman, id 19
 #: war/models/squads/infantry.py:47 war/models/wars/war_side.py:30
 msgid "Автоматы"
-msgstr ""
+msgstr "Аўтаматы"
 
 #: war/models/squads/light_vehicle.py:47 war/models/wars/war_side.py:32
 msgid "БМП"
@@ -4505,10 +4521,9 @@ msgstr "Дроны"
 #~ msgid " золота"
 #~ msgstr "Золата"
 
-#, fuzzy
 #~ msgctxt "goods"
 #~ msgid "Финансирование"
-#~ msgstr "Фінансаваньне"
+#~ msgstr "Фінансаванне"
 
 #, fuzzy
 #~ msgctxt "goods"
@@ -4520,9 +4535,8 @@ msgstr "Дроны"
 #~ msgid "Навыки"
 #~ msgstr "Навыкі"
 
-#, fuzzy
 #~ msgid "Тестовый сервер войн"
-#~ msgstr "мейсца ў рэйтынгу"
+#~ msgstr "месца ў рэйтынгу"
 
 #, fuzzy
 #~ msgctxt "goods"
@@ -4553,23 +4567,22 @@ msgstr "Дроны"
 #~ msgstr "Баксіты"
 
 #~ msgid "Нефть WTI"
-#~ msgstr "WTI"
+#~ msgstr "Нафта WTI"
 
 #~ msgid "Нефть Brent"
-#~ msgstr "Brent"
+#~ msgstr "Нафта Brent"
 
 #~ msgid "Нефть Urals"
-#~ msgstr "Уральская"
+#~ msgstr "Нафта Urals"
 
 #~ msgid "Сталь"
 #~ msgstr "Сталь"
 
 #~ msgid "Алюминий"
-#~ msgstr "Алюмін"
+#~ msgstr "Алюміній"
 
-#, fuzzy
 #~ msgid "Медикаменты"
-#~ msgstr "парлямэнт"
+#~ msgstr "Медыкаменты"
 
 #~ msgid "Штурмовики"
 #~ msgstr "Штурмавікі"
@@ -4577,18 +4590,16 @@ msgstr "Дроны"
 #~ msgid "ПЗРК"
 #~ msgstr "ПЗРК"
 
-#, fuzzy
 #~ msgctxt "goods"
 #~ msgid "Койки"
-#~ msgstr "налады"
+#~ msgstr "Ложкі"
 
 #~ msgid "Койки - кубов"
-#~ msgstr "Койкі - кубоў"
+#~ msgstr "Койкі"
 
-#, fuzzy
 #~ msgctxt "goods"
 #~ msgid "Койки - лимит"
-#~ msgstr "Баксіты - кубоў"
+#~ msgstr "Ложкі - кубоў"
 
 #, fuzzy
 #~ msgctxt "mining"
