--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -615,7 +615,7 @@ msgstr "información"
 #: party/templates/party/redesign/party_view.html:49
 msgctxt "party_view"
 msgid "состав"
-msgstr "componentes"
+msgstr "integrantes"
 
 #: party/templates/party/redesign/party_view.html:85
 msgctxt "party_view"
